--- a/WebFuturoApi/appsettings.json
+++ b/WebFuturoApi/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbContext": "Server=tcp:alexilobosparcial.database.windows.net,1433;Initial Catalog=AlexiBD;Persist Security Info=False;User ID=alexi;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
+
 }
